--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "dependencies": {},
   "devDependencies": {
-    "express": "^4.15.3",
-    "phaser-ce": "^2.8.1"
+    "express": "^4.15.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
